--- a/angular2-seed-final/angular2-seed-final/app/mentee-form.html
+++ b/angular2-seed-final/angular2-seed-final/app/mentee-form.html
@@ -1,1 +1,20 @@
-<h3>Coming Soon </h3>
+<h1>Add a mentor</h1>
+ 
+     <div >
+            <label>Select Category</label>
+     </div>
+
+         <div> 
+            <select [(ngModel)] ='SelectedValue'>
+                <option *ngFor ="let category of categorylist" >{{category}}</option>
+            </select>
+         </div>
+         <div>
+             <label >select Schedule  </label>
+         </div>
+         <div>
+             <input id ="scheduleid" type="datetime-local"  [(ngModel)]='SelectedSchedule'>
+             <button (click)="fRegisterMentor()">Register</button>
+         </div>
+
+   
